[gd_scene load_steps=2 format=3 uid="uid://chw3reglhg6by"]

[ext_resource type="Script" uid="uid://b3yjq0pkaiowy" path="res://objects/ui/chart_visualizer/chart_visualizer.gd" id="1_gele2"]

[node name="ChartVisualizer" type="Control"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 3
anchors_preset = 0
offset_right = 100.0
offset_bottom = 100.0
script = ExtResource("1_gele2")
xaxis = Vector2(0, 50)
yaxis = Vector2(-10, 50)
yaxis_base = 0.0
points = Array[Vector2]([Vector2(0, 10), Vector2(10, 20), Vector2(20, -10), Vector2(30, 50), Vector2(50, 10)])

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="XaxisBase" type="Line2D" parent="."]
points = PackedVector2Array(0, 0, 0, 100)
width = 5.0
default_color = Color(0, 0, 0, 0.498039)

[node name="YaxisBase" type="Line2D" parent="."]
points = PackedVector2Array(0, 83.3333, 100, 83.3333)
width = 5.0
default_color = Color(0, 0, 0, 0.498039)

[node name="Polygon2D" type="Polygon2D" parent="."]
color = Color(1, 0, 0, 0.498039)
polygon = PackedVector2Array(0, 100, 0, 66.6667, 20, 50, 40, 100, 60, 0, 100, 66.6667, 100, 100)

[node name="Line2D" type="Line2D" parent="."]
points = PackedVector2Array(0, 66.6667, 20, 50, 40, 100, 60, 0, 100, 66.6667)
width = 5.0
default_color = Color(1, 0, 0, 1)

[connection signal="resized" from="." to="." method="_on_resized"]
